--- a/src/pages/md-astro/markdown-wrapper.astro
+++ b/src/pages/md-astro/markdown-wrapper.astro
@@ -3,8 +3,9 @@ import Docs from '../../layouts/Docs.astro'
 ---
 
 <Docs
-	title="223 指导"
+	title="目录"
 	thumbnail="/documentation/backgrounds/pascal-debrunner-LKOuYT5_dyw-unsplash.jpg"
 >
+<br />
 <slot/>
 </Docs>
