--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -59,7 +59,7 @@ const trans = isChinese ? zh : en
 				<Link href="/" id="homeLink">🏠 {trans.Home}</Link>
 				<Link href="/#open">🌏 {trans.Online}</Link>
 				<Link href="/#further">☎️ {trans.Contact}</Link>
-				<Link href={trans.DocsRoot}>{trans.Docs}</Link>
+				<Link href={trans.DocsRoot}>📋 {trans.Docs}</Link>
 			</div>
 
 			<hr />
