--- a/src/components/Docs/DocsLanding.astro
+++ b/src/components/Docs/DocsLanding.astro
@@ -7,19 +7,19 @@ const title = props.lang === 'zh' ? '售后文档' : 'After Sales Docs'
 
 <Docs title={title} thumbnail="/documentation/backgrounds/martin-marek-1hRH-z4nvxE-unsplash.jpg">
 	<section id="summary">
-		<a href={locale + '/docs/contribute'}>
+		<a href={locale + '/docs/catalog'}>
 			<span>📰</span>
 
 			<div>
-				<h3><slot name="overview-title" /></h3>
+				<h3><slot name="menu-doc" /></h3>
 			</div>
 		</a>
 
-		<a href={locale + '/docs/catalog'}>
+		<a href={locale + '/docs/catalog-video'}>
 			<span>▶️</span>
 
 			<div>
-				<h3><slot name="video-223" /></h3>
+				<h3><slot name="menu-video" /></h3>
 			</div>
 		</a>
 
