英文版目录

--- a/src/pages/docs/index.astro
+++ b/src/pages/docs/index.astro
@@ -3,8 +3,8 @@ import DocsLanding from '../../components/Docs/DocsLanding.astro'
 ---
 
 <DocsLanding lang="en">
-	<span slot="menu-doc">223 Doc Tutorial</span>
-	<span slot="menu-video">223 Video Tutorial</span>
+	<span slot="menu-doc">Doc Tutorial</span>
+	<span slot="menu-video">Video Tutorial</span>
 	<section slot="docs">
 		<p>The Da Chuan after-sales web system is under development, please refer to the aforementioned document for guidance first.</p>
 		<br />
