--- a/src/components/Frontpage/Frontpage.astro
+++ b/src/components/Frontpage/Frontpage.astro
@@ -93,11 +93,11 @@ import OpenImage from '../../assets/backgrounds/matt-drenth-IZ0a3V1aSbc.jpg'
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		min-height: 700px;
+		min-height: 400px;
 	}
 
 	#further {
-		min-height: 900px;
+		min-height: 500px;
 		background-color: #fafafd;
 	}
 
@@ -111,11 +111,15 @@ import OpenImage from '../../assets/backgrounds/matt-drenth-IZ0a3V1aSbc.jpg'
 	}
 
 	@media only screen and (min-width: 1600px) {
-		#open,
 		#donate,
 		#further {
-			min-height: 900px;
+			min-height: 500px;
 		}
+
+		#open {
+			min-height: 700px;
+		}
+
 	}
 
 	@media only screen and (max-width: 500px) {
