--- a/src/components/Frontpage/Frontpage.astro
+++ b/src/components/Frontpage/Frontpage.astro
@@ -87,16 +87,17 @@ import OpenImage from '../../assets/backgrounds/matt-drenth-IZ0a3V1aSbc.jpg'
 		max-width: 600px;
 	}
 
-	#open,
-	#donate,
+	#open {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		min-height: 700px;
+	}
+
 	#further {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		min-height: 400px;
-	}
-
-	#further {
 		min-height: 500px;
 		background-color: #fafafd;
 	}
