--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,8 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 	<Frontpage>
 		<Landing slot="landing">
 			<span slot="subtitle"
-				>The first and only company in China<br />that simultaneously possesses the<br
-				/>interior modification of 222 & 223</span
+				><br />simultaneously possesses <br/>interior
+				modification of 222 <br/>and 223</span
 			>
 			<span slot="button_more">SEE MORE</span>
 			<span slot="other_1"> One-stop · Innovation · International</span>
@@ -53,7 +53,6 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 		</Showcase>
 
 		<Further slot="further">
-
 			<span slot="title">Contact Us</span>
 			<span slot="docs-title">Business Cooperation</span>
 			<span slot="docs-desc">
@@ -70,7 +69,6 @@ import Showcase from '../components/Frontpage/Showcase.astro'
 				3 . Customer Service
 			</span>
 			<span slot="repo-button">Enter System</span>
-			
 		</Further>
 
 		<h2 slot="global-title">Be International, E-commerce</h2>
