--- a/src/pages/md-astro/markdown-222-wrapper.astro
+++ b/src/pages/md-astro/markdown-222-wrapper.astro
@@ -2,7 +2,7 @@
 import Docs from '../../layouts/Docs.astro'
 const isChinese = Astro.url.pathname.startsWith('/zh')
 const en = { Title: '222 Instruction' }
-const zh = { Title: '222 指导' }
+const zh = { Title: '指导 222' }
 const trans = isChinese ? zh : en
 ---
 
