--- a/src/components/Docs/DocsLanding.astro
+++ b/src/components/Docs/DocsLanding.astro
@@ -7,21 +7,21 @@ const title = props.lang === 'zh' ? '售后文档' : 'After Sales Docs'
 
 <Docs title={title} thumbnail="/documentation/backgrounds/martin-marek-1hRH-z4nvxE-unsplash.jpg">
 	<section id="summary">
-		<a href={locale + '/docs/catalog'}>
-			<span>📰</span>
+		<a href=“https://docs-2g9k28nuef7dcd1a-1302286626.tcloudbaseapp.com/”>
+			<span>🚙</span>
 
 			<div>
 				<h3><slot name="menu-doc" /></h3>
 			</div>
 		</a>
 
-		<a href={locale + '/docs/catalog-video'}>
+		<!-- <a href={locale + '/docs/catalog-video'}>
 			<span>▶️</span>
 
 			<div>
 				<h3><slot name="menu-video" /></h3>
 			</div>
-		</a>
+		</a> -->
 
 		<!-- <a href={locale + '/docs/contribute'}>
 			<span>📰</span>
