--- a/src/pages/zh/docs/index.astro
+++ b/src/pages/zh/docs/index.astro
@@ -3,8 +3,7 @@ import DocsLanding from '../../../components/Docs/DocsLanding.astro'
 ---
 
 <DocsLanding lang="zh">
-	<span slot="menu-doc">图文指导</span>
-	<span slot="menu-video">视频指导</span>
+	<span slot="menu-doc">车改工程师手册</span>
 	<br />
 	<section slot="docs">
 		<p>大川售后 Web 系统正在开发中，请先查阅上述文档指导</p>
