--- a/src/components/Docs/DocsLanding.astro
+++ b/src/components/Docs/DocsLanding.astro
@@ -7,7 +7,7 @@ const title = props.lang === 'zh' ? '售后文档' : 'After Sales Docs'
 
 <Docs title={title} thumbnail="/documentation/backgrounds/martin-marek-1hRH-z4nvxE-unsplash.jpg">
 	<section id="summary">
-		<a href=“https://docs-2g9k28nuef7dcd1a-1302286626.tcloudbaseapp.com/”>
+		<a href="https://docs-2g9k28nuef7dcd1a-1302286626.tcloudbaseapp.com/">
 			<span>🚙</span>
 
 			<div>
